# kubejs-string-extractor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/kubejs_string_extractor/: __init__.py  cli.py  extractor.py  keygen.py  rewriter.py  writer.py
tests/: test_extractor.py
